--- a/Shift_Setter.ipynb
+++ b/Shift_Setter.ipynb
@@ -40,7 +40,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Points to be consider:\n",
+        "Points to consider:\n",
         "\n",
         "- Some indivs have some day limitations to have a shift\n",
         "- Some indivs should be tagged with someone else: first version will not considering the tags. because the priority is day limitations. then with regarding the tags the next version will be produced based on minimal changing on the previous version.\n",
